epub4j-native/cpp/include/epub_native.h

// ============================================================================
// Error Codes
// ============================================================================

typedef enum {
    EPUB_NATIVE_SUCCESS = 0,
    EPUB_NATIVE_ERROR_PARSE = 1,
    EPUB_NATIVE_ERROR_IO = 2,
    EPUB_NATIVE_ERROR_MEMORY = 3,
    EPUB_NATIVE_ERROR_INVALID_ARG = 4,
    EPUB_NATIVE_ERROR_NOT_FOUND = 5,
    EPUB_NATIVE_ERROR_NAMESPACE = 6
} EpubNativeError;
typedef struct EpubNativeHtmlCleaner EpubNativeHtmlCleaner;
typedef struct EpubNativeEncodingDetector EpubNativeEncodingDetector;
// NCX TOC Reference structure
typedef struct {
    const char* title;
    const char* href;
    int play_order;
    int has_children;
} EpubNativeTOCReference;
// ============================================================================
// Navigation Document (EPUB 3 TOC)
// ============================================================================

/**
 * Create EPUB 3 navigation document
 * @param title Document title
 * @param toc_refs TOC references
 * @param toc_count Count of TOC references
 * @param out_xhtml Output XHTML string (caller must free)
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_nav_create(
    const char* title,
    const EpubNativeTOCReference* toc_refs,
    size_t toc_count,
    char** out_xhtml
);
// ============================================================================
// HTML Cleaner (HTML to XHTML conversion)
// ============================================================================

/**
 * Create HTML cleaner instance
 * @param out_cleaner Output cleaner pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_html_cleaner_create(
    EpubNativeHtmlCleaner** out_cleaner
);
/**
 * Free HTML cleaner instance
 * @param cleaner Cleaner to free
 */
EPUB_NATIVE_API void epub_native_html_cleaner_free(EpubNativeHtmlCleaner* cleaner);
/**
 * Clean HTML content and convert to XHTML
 * @param cleaner HTML cleaner instance
 * @param html_content Input HTML content
 * @param html_length Length of HTML content
 * @param output_encoding Output encoding (e.g., "UTF-8")
 * @param out_xhtml Output XHTML string (caller must free)
 * @param out_length Output length of XHTML
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_html_clean(
    EpubNativeHtmlCleaner* cleaner,
    const char* html_content,
    size_t html_length,
    const char* output_encoding,
    char** out_xhtml,
    size_t* out_length
);
// ============================================================================
// Utility Functions
// ============================================================================

/**
 * Get library version string
 * @return Version string (do not free)
 */
EPUB_NATIVE_API const char* epub_native_get_version(void);
/**
 * Get last error message
 * @return Error message (do not free)
 */
EPUB_NATIVE_API const char* epub_native_get_last_error(void);
// ============================================================================
// Encoding Detection
// ============================================================================

/**
 * Create encoding detector instance
 * @param out_detector Output detector pointer
 * @return Error code
 */
EPUB_NATIVE_API EpubNativeError epub_native_encoding_detector_create(
    EpubNativeEncodingDetector** out_detector
);