epub4j-native/java/src/main/java/org/grimmory/epub4j/native_parsing/EpubNativeHeaders.java


    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_nav_create(const char *title, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xhtml)
     * }
     */
    public static MemorySegment epub_native_nav_create$address() {
        return epub_native_nav_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_nav_create(const char *title, const EpubNativeTOCReference *toc_refs, size_t toc_count, char **out_xhtml)
     * }
     */
    public static int epub_native_nav_create(MemorySegment title, MemorySegment toc_refs, long toc_count, MemorySegment out_xhtml) {
        var mh$ = epub_native_nav_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_nav_create", title, toc_refs, toc_count, out_xhtml);
            }
            return (int)mh$.invokeExact(title, toc_refs, toc_count, out_xhtml);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_html_cleaner_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_html_cleaner_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_cleaner_create(EpubNativeHtmlCleaner **out_cleaner)
     * }
     */
    public static FunctionDescriptor epub_native_html_cleaner_create$descriptor() {
        return epub_native_html_cleaner_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_cleaner_create(EpubNativeHtmlCleaner **out_cleaner)
     * }
     */
    public static MethodHandle epub_native_html_cleaner_create$handle() {
        return epub_native_html_cleaner_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_cleaner_create(EpubNativeHtmlCleaner **out_cleaner)
     * }
     */
    public static MemorySegment epub_native_html_cleaner_create$address() {
        return epub_native_html_cleaner_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_cleaner_create(EpubNativeHtmlCleaner **out_cleaner)
     * }
     */
    public static int epub_native_html_cleaner_create(MemorySegment out_cleaner) {
        var mh$ = epub_native_html_cleaner_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_html_cleaner_create", out_cleaner);
            }
            return (int)mh$.invokeExact(out_cleaner);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_html_cleaner_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_html_cleaner_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void epub_native_html_cleaner_free(EpubNativeHtmlCleaner *cleaner)
     * }
     */
    public static FunctionDescriptor epub_native_html_cleaner_free$descriptor() {
        return epub_native_html_cleaner_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void epub_native_html_cleaner_free(EpubNativeHtmlCleaner *cleaner)
     * }
     */
    public static MethodHandle epub_native_html_cleaner_free$handle() {
        return epub_native_html_cleaner_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void epub_native_html_cleaner_free(EpubNativeHtmlCleaner *cleaner)
     * }
     */
    public static MemorySegment epub_native_html_cleaner_free$address() {
        return epub_native_html_cleaner_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void epub_native_html_cleaner_free(EpubNativeHtmlCleaner *cleaner)
     * }
     */
    public static void epub_native_html_cleaner_free(MemorySegment cleaner) {
        var mh$ = epub_native_html_cleaner_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_html_cleaner_free", cleaner);
            }
            mh$.invokeExact(cleaner);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_html_clean {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_LONG_LONG,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_html_clean");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_clean(EpubNativeHtmlCleaner *cleaner, const char *html_content, size_t html_length, const char *output_encoding, char **out_xhtml, size_t *out_length)
     * }
     */
    public static FunctionDescriptor epub_native_html_clean$descriptor() {
        return epub_native_html_clean.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_clean(EpubNativeHtmlCleaner *cleaner, const char *html_content, size_t html_length, const char *output_encoding, char **out_xhtml, size_t *out_length)
     * }
     */
    public static MethodHandle epub_native_html_clean$handle() {
        return epub_native_html_clean.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_clean(EpubNativeHtmlCleaner *cleaner, const char *html_content, size_t html_length, const char *output_encoding, char **out_xhtml, size_t *out_length)
     * }
     */
    public static MemorySegment epub_native_html_clean$address() {
        return epub_native_html_clean.ADDR;
    }

    /**
     * {@snippet lang=c :
     * EpubNativeError epub_native_html_clean(EpubNativeHtmlCleaner *cleaner, const char *html_content, size_t html_length, const char *output_encoding, char **out_xhtml, size_t *out_length)
     * }
     */
    public static int epub_native_html_clean(MemorySegment cleaner, MemorySegment html_content, long html_length, MemorySegment output_encoding, MemorySegment out_xhtml, MemorySegment out_length) {
        var mh$ = epub_native_html_clean.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_html_clean", cleaner, html_content, html_length, output_encoding, out_xhtml, out_length);
            }
            return (int)mh$.invokeExact(cleaner, html_content, html_length, output_encoding, out_xhtml, out_length);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_get_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_get_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *epub_native_get_version()
     * }
     */
    public static FunctionDescriptor epub_native_get_version$descriptor() {
        return epub_native_get_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *epub_native_get_version()
     * }
     */
    public static MethodHandle epub_native_get_version$handle() {
        return epub_native_get_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *epub_native_get_version()
     * }
     */
    public static MemorySegment epub_native_get_version$address() {
        return epub_native_get_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *epub_native_get_version()
     * }
     */
    public static MemorySegment epub_native_get_version() {
        var mh$ = epub_native_get_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_get_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_get_last_error {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_POINTER    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_get_last_error");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *epub_native_get_last_error()
     * }
     */
    public static FunctionDescriptor epub_native_get_last_error$descriptor() {
        return epub_native_get_last_error.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *epub_native_get_last_error()
     * }
     */
    public static MethodHandle epub_native_get_last_error$handle() {
        return epub_native_get_last_error.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *epub_native_get_last_error()
     * }
     */
    public static MemorySegment epub_native_get_last_error$address() {
        return epub_native_get_last_error.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *epub_native_get_last_error()
     * }
     */
    public static MemorySegment epub_native_get_last_error() {
        var mh$ = epub_native_get_last_error.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("epub_native_get_last_error");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class epub_native_encoding_detector_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            EpubNativeHeaders.C_INT,
            EpubNativeHeaders.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("epub_native_encoding_detector_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    public static FunctionDescriptor epub_native_encoding_detector_create$descriptor() {
        return epub_native_encoding_detector_create.DESC;
    }
